# Rust-DB-engine

./: .gitignore  Cargo.toml  README.md  dbdm_project_Guilhem_NIOT_Yann_AGUETTAZ.md  old  output.csv
expr_samples/: rename.json  test00.json  test02.json
expr_samples/benchmarks/: bench01.json  bench02.json
project/: DBDM-2021-project.html
project_spec/: DBDM-2021-project.html
src/: benchmark.rs  cargo-testing  eval.rs  main.rs  optimize.rs  output.rs  parse_json.rs  parser.rs  types.rs
src/tests/: eval_test.rs  optimize_test.rs
tests/: conditions.json  rename.json  test01.json
tests/benchmarks/: bench01.json
